--- a/about.html
+++ b/about.html
@@ -290,7 +290,7 @@
                                         <img src="images/Products-one.jpg" alt="sourcing-materials" />
                                     </a>
                                     <h4 class="services-title-one subtitle">SOURCING MATERIALS</h4>
-                                    <p>Professionally drive clicks-and-mortar web readiness after progressive e-commerce. Dramatically unleash cross functional.</p>
+                                    <p>Quarry and manufacturing factories are our first stop after receiving you orders, we liaise straight with the leading cement factories and mining quarries in the industry.</p>
                                     <a class="link" href="Sourcing-materials.html">Read More</a>
                                 </div>
 
@@ -299,7 +299,7 @@
                                         <img src="images/operation-I.jpg" alt="our-operations" />
                                     </a>
                                     <h4 class="services-title-one subtitle">OUR OPERATIONS</h4>
-                                    <p>Energistically productize wireless mindshare for emerging experiences. Myocardinate enabled alignments and magnetic scenarios. </p>
+                                    <p>This detailed approach highlights Johkanyim's strong and professional commitment to sustainability, emphasizing the responsibility We take throughout the entire supply chain. </p>
                                     <a class="link" href="operation.html">Read More</a>
                                 </div>
                             </div>
@@ -325,8 +325,8 @@
 
                         <div class="sidebar-fact">
 
-                            <h3 class="about-quick-fact">Quick Fact</h3>
-                            <p>Distinctively fashion in the effect of standard products communities via seamless applications. Authoritatively recaptiualize.</p>
+                            <!-- <h3 class="about-quick-fact">Quick Fact</h3>
+                            <p>Did you know tha.</p> -->
                             <a href="#" class="btn about-quick-fact-button btn-widther" role="button">Get a Quote</a>
 
                         </div>
