--- a/approach.html
+++ b/approach.html
@@ -184,8 +184,8 @@
                         </div>
                  
                         <div class="sidebar-fact">
-                            <h3 class="about-quick-fact">Quick Fact</h3>
-                            <p>Distinctively fashion in the effect of standard products communities via seamless applications. Authoritatively recaptiualize.</p>
+                            <!-- <h3 class="about-quick-fact">Quick Fact</h3>
+                            <p>Distinctively fashion in the effect of standard products communities via seamless applications. Authoritatively recaptiualize.</p> -->
                             <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Get a Quote</a>
                         </div>
                     </div>
