--- a/mission.html
+++ b/mission.html
@@ -208,8 +208,8 @@
 
                         <div class="sidebar-fact">
 
-                            <h3 class="about-quick-fact">Quick Fact</h3>
-                            <p>Did you know .</p>
+                            <!-- <h3 class="about-quick-fact">Quick Fact</h3>
+                            <p>Did you know .</p> -->
                             <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Get a Quote</a>
 
                         </div>
