--- a/operation.html
+++ b/operation.html
@@ -161,29 +161,26 @@
                             <div class="blog-slide">
                                 <ul class="slides">
                                     <li>
-                                        <img src="images/blog-single-1.jpg" alt="blog-image 1" />
+                                        <img src="images/slide-1.jpg" alt="blog-image 1" />
                                     </li>
                                     <li>
-                                        <img src="images/blog-single-2.jpg" alt="blog-image 2" />
+                                        <img src="images/slide-2.jpg" alt="blog-image 2" />
                                     </li>
                                     <li>
-                                        <img src="images/blog-single-3.jpg" alt="blog-image 3" />
+                                        <img src="images/slide-3.jpg" alt="blog-image 3" />
                                     </li>
                                 </ul>
                             </div>
 
                             <div class="single-post">
                                 <h4 class="services-title-one subtitle">Uniquely transform premier infrastructures before functional metrics. Completely mesh sustainable leadership for economically sound sources. </h4>
-                                <p>Distinctively fashion standardized communities vis-a-vis seamless applications. Authoritatively recaptiualize efficient supply chains without vertical initiatives. Progressively visualize strategic relationships with error-free processes. Credibly strategize fully tested outsourcing with functional e-markets. Dynamically evisculate user friendly architectures before cross-media experiences. Interactively disintermediate empowered data whereas distinctive human capital. Compellingly utilize.</p>
-                                <p>Dynamically utilize intermandated materials through customized process improvements. Conveniently recaptiualize adaptive leadership before long-term high-impact functionalities. Completely incubate customer directed meta-services after economically sound imperatives. Distinctively evolve diverse applications for enterprise processes. Monotonectally disintermediate functionalized solutions rather than progressive leadership.</p>
+                                <p>At Johkanyim, we are committed to sustainability and responsible sourcing. Our exclusive partnership with Ndovu Cement and Aggregates aligns with our goal to promote environmentally responsible construction practices. Ndovu follows ethical mining practices, ensuring minimal environmental impact and responsible management of natural resources.</p>
+                                <p>We also ensure that all other materials, such as sand, ballast, hardcore, and aggregates, are sourced in a way that respects both local ecosystems and communities. By working closely with ethical suppliers, we maintain our commitment to sustainability, ensuring that the products we provide are both of the highest quality and responsibly sourced.</p>
 
-                                <div class="cta">
-                                    <h2>Wealth can only be accumulated by the earnings of industry and the savings of frugality.</h2>
-                                </div>
 
-                                <!-- <h2 class="title-2">The Conclusion</h2> -->
-                                <p>Continually myocardinate reliable channels with distributed networks. Monotonectally scale end-to-end bandwidth for ethical e-markets. Enthusiastically disintermediate low-risk high-yield ideas for robust outsourcing. Monotonectally provide access to corporate data through diverse materials. Collaboratively empower resource maximizing experiences and progressive meta-services. Energistically engage quality leadership for cooperative services. Energistically leverage existing client-centered experiences via virtual solutions. Compellingly conceptualize professional e-tailers through efficient action items. Credibly seize pandemic ROI with client-centered applications.</p>
-                                <p>Interactively mesh client-centered content whereas interdependent niche markets. Appropriately iterate one-to-one web-readiness rather than impactful supply.</p>
+                                <h2 class="title-2">The Conclusion</h2>
+                                <p>With Ndovu Cement and Aggregates as our exclusive cement sourcing partner, Johkanyim is able to deliver high-quality, reliable, and consistent materials for construction projects of all sizes. Our dedication to quality, sustainability, and customer satisfaction ensures that each project we support is built on a foundation of trust and excellence.</p>
+                            
                             </div>
 
 
