--- a/mission.html
+++ b/mission.html
@@ -210,7 +210,7 @@
 
                             <!-- <h3 class="about-quick-fact">Quick Fact</h3>
                             <p>Did you know .</p> -->
-                            <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Get a Quote</a>
+                            <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Talk to Us</a>
 
                         </div>
 
