--- a/leaders.html
+++ b/leaders.html
@@ -149,9 +149,9 @@
 
                             <div class="com">
                                 <h2 class="company-title color-title"> OUR TEAM </h2>
-                                <h4 class="company-subtitle subtitle"> Uniquely transform premier infrastructures before functional metrics. Completely mesh sustainable leadership for economically sound sources.  </h4>
+<!--                                 <h4 class="company-subtitle subtitle"> Uniquely transform premier infrastructures before functional metrics. Completely mesh sustainable leadership for economically sound sources.  </h4>
                                 <p> At Johkanyim, we position ourselves on having a team of dedicated professionals who share a common goal—delivering excellent service and high-quality materials to our clients. Our staff includes experienced sourcing experts, quality control professionals, delivery coordinators, and customer service specialists, all of whom work collaboratively to ensure that each customer experience is seamless and satisfying.</p>
-                                <p> Our team is committed to ongoing professional development, staying ahead of industry trends and maintaining deep knowledge of the latest advancements in materials and construction practices. We understand that the construction industry is constantly evolving, and we pride ourselves on being a forward-thinking company that is always ready to meet new challenges.</p>
+                                <p> Our team is committed to ongoing professional development, staying ahead of industry trends and maintaining deep knowledge of the latest advancements in materials and construction practices. We understand that the construction industry is constantly evolving, and we pride ourselves on being a forward-thinking company that is always ready to meet new challenges.</p> -->
 
                             </div>
                         </section>
@@ -159,7 +159,7 @@
                         <section class="about-leaders">
                             <div class="section-title text-center">
                                 <h2 class="title-services-other title-2"> OUR LEADERS </h2>
-                                <h4 class="subtitle-services-other subtitle-2">Objectively whiteboard transparent models for prospective <br/> information. Authoritatively myocardinate.</h4>
+<!--                                 <h4 class="subtitle-services-other subtitle-2">Objectively whiteboard transparent models for prospective <br/> information. Authoritatively myocardinate.</h4> -->
                                 <div class="spacer-50"> </div>
                             </div>
 
@@ -272,7 +272,7 @@
 
                             <!-- <h3 class="about-quick-fact">Quick Fact</h3>
                             <p>Distinctively fashion in the effect of standard products communities via seamless applications. Authoritatively recaptiualize.</p> -->
-                            <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Get a Qoute</a>
+                            <a href="contact.html" class="btn btn-primary about-quick-fact-button" role="button">Talk to Us</a>
 
                         </div>
 
