--- a/leaders.html
+++ b/leaders.html
@@ -149,7 +149,7 @@
 
                             <div class="com">
                                 <h2 class="company-title color-title"> OUR TEAM </h2>
-<!--                                 <h4 class="company-subtitle subtitle"> Uniquely transform premier infrastructures before functional metrics. Completely mesh sustainable leadership for economically sound sources.  </h4>-->
+                             <h4 class="company-subtitle subtitle"> We are transforming infrastructures the building and construction industry. We achieve this objective through accountable leadership.  </h4>
                                 <p> At Johkanyim, we position ourselves on having a team of dedicated professionals who share a common goal—delivering excellent service and high-quality materials to our clients. Our staff includes experienced sourcing experts, quality control professionals, delivery coordinators, and customer service specialists, all of whom work collaboratively to ensure that each customer experience is seamless and satisfying.</p>
                                 <p> Our team is committed to ongoing professional development, staying ahead of industry trends and maintaining deep knowledge of the latest advancements in materials and construction practices. We understand that the construction industry is constantly evolving, and we pride ourselves on being a forward-thinking company that is always ready to meet new challenges.</p>
 
