--- a/about.html
+++ b/about.html
@@ -327,7 +327,7 @@
 
                             <!-- <h3 class="about-quick-fact">Quick Fact</h3>
                             <p>Did you know tha.</p> -->
-                            <a href="#" class="btn about-quick-fact-button btn-widther" role="button">Get a Quote</a>
+                            <a href="#" class="btn about-quick-fact-button btn-widther" role="button">Talk to Us</a>
 
                         </div>
 
