--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     <p> Supplier of products including but not limited to building blocks, hardcore, 
                                         <br> natural 
                                         gravel, ballast, sand, and cement.</p>
-                                    <a href="about.html" class="btn primary-btn"> LEARN MORE <i class="fa-solid fa-arrow-right"></i> </a>
+                                    <a href="about.html" class="btn primary-btn"> LEARN MORE <i class="fa fa-arrow-right"></i> </a>
                         
                                 </div>
                             </div>
